# customer-segmentation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: cleaning_rules.yml
data/processed/: customer_segments_final.csv  customer_segments_labeled.csv  dbscan_labels.csv  hierarchical_labels.csv  labels_k3.csv  rfm_scaled.csv  rfm_table.csv  rfm_with_dbscan.csv  rfm_with_hierarchical.csv  rfm_with_segment.csv  segment_narratives.csv  segment_profiles.csv  transactions_cleaned.csv  transactions_issues_catalog.csv
data/raw/: sample_transactions.csv
data/sample/: online_retail_sample.csv  online_retail_tiny.csv
models/: dbscan_best.joblib  hierarchical_k2.joblib  kmeans_k3.joblib
notebooks/: 01_rfm_analysis.ipynb  02_clustering.ipynb  example_analysis.py
reports/: cleaning_findings.json  cleaning_report.md  segment_report.html  segment_report.md
reports/figures/: clustering_comparison.csv  portfolio_segment_profiles.csv
scripts/: clean_readme.py  generate_sample_data.py  make_portfolio_assets.py  run_cleaning.py  update_readme.py  update_readme_cleaning.py
src/: alternative_clustering.py  app_core.py  cleaning.py  clustering.py  interpretation_reporting.py  rfm_analysis.py  rfm_scaling.py  test_scaling.py
streamlit_app/: app.py
tests/: __init__.py  conftest.py  test_alternative_clustering.py  test_app_core.py  test_cleaning.py  test_clustering.py  test_portfolio_assets.py  test_reporting.py  test_scaling.py  test_tooling.py
