[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*",
    "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.*",
    "ignore::pytest.PytestDeprecationWarning",
]
